--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "client build": "cd client && npm run build && cd .."
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
