--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "client build": "cd client && npm run build && cd .."
+    "build": "cd client && npm run build && cd .."
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.21",
     "yarn": "^1.22.19"
   }
