--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
