--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "client",
+  "name": "findvibe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.15",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "axios": "^1.3.4",
-    "concurrently": "^7.6.0",
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.2.7",
+    "react-viewport-height": "^1.2.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.19"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node node"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "devDependencies": {
+    "@wixc3/react-board": "^2.1.3",
+    "tailwindcss": "^3.2.7"
+  }
 }
